# qc-project5

./: .gitmodules  CMakeLists.txt  extract_circuits.sh  feynman.txt  readme.md  results.py  tensor_product.txt  test.ipynb
GRCS/inst/rectangular/cz_v2/: 10x10.tar.xz  10x11.tar.xz  11x11.tar.xz  11x12.tar.xz  12x12.tar.xz  4x4.tar.xz  4x5.tar.xz  5x5.tar.xz  5x6.tar.xz  6x6.tar.xz  6x7.tar.xz  7x7.tar.xz  7x8.tar.xz  8x8.tar.xz  8x9.tar.xz  9x10.tar.xz  9x9.tar.xz
GRCS/inst/rectangular/is_v1/: 10x10.tar.xz  10x11.tar.xz  11x11.tar.xz  11x12.tar.xz  12x12.tar.xz  4x4.tar.xz  4x5.tar.xz  5x5.tar.xz  5x6.tar.xz  6x6.tar.xz  6x7.tar.xz  7x7.tar.xz  7x8.tar.xz  8x8.tar.xz  8x9.tar.xz  9x10.tar.xz  9x9.tar.xz
results/: cpu_results.txt  gpu_result.txt
src/: complex.h  feynman_simulator.h  gates.h  kokkos.h  main.cpp  reader.h  simulator.h  types.h
src/io/output/: format_array.h  output.h  print.h  print_complex.h  util.h
src/util/: arg_parser.h  template_util.h
